# partnership-intelligence-analyzer

./: .env.example  .gitignore  README.md  config.yaml  docker-compose.yml  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
.claude/: launch.json
api/: endpoints.py
aria_pi/: README.md  __init__.py  config.py  requirements.txt
aria_pi/models/: __init__.py  claim.py  company.py  profile.py  report.py  sector.py
aria_pi/utils/: __init__.py  (+3 more)
assets/: index--JGabbMv.js  index-2eh5eucg.js  index-302cLyCa.js  index-BhF6MzJ_.js  index-BsxH2Qw4.js  index-By0USc1E.js  index-BzTCWhxv.js  index-C3-ix_J4.js  index-CApER8ta.js  index-CCzrp1tp.js  index-CLi990_V.js  index-C_lvBtL0.js  index-ClFpJij_.js  index-CuLJhTJ5.js  index-CwsjSOy7.js  index-Cz4fgpWr.js  index-DCTt_Oz3.js  index-Dt-DeBjb.js  index-Dt6EUEOT.js  index-xJEeVvqV.js  index-yq675TKv.js
core/: analyzer.py
data/: unc_departments.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
reports/: apple.txt  google.txt  microsoft.txt  openai.txt
scripts/: generate_apple_pdf.py  generate_company_report.py  generate_deliverables.py  generate_eli_lilly_pdf.py  generate_epic_pdf.py  generate_google_pdf.py  generate_jnj_pdf.py  generate_microsoft_pdf.py  generate_pfizer_pdf.py  generate_siemens_healthineers_pdf.py  generate_unc_health_pdf.py  process_company_profiles.py  run_company_profiles.sh  run_full_validation.sh  verify_company_profiles.py  verify_processed_outputs.py
src/: App.jsx
tests/: test_analyzer.py  test_endpoints.py
(+39 files in other folders)
