[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aria-pi"
version = "0.1.0"
description = "Automated Research Intelligence for Academic Partnership Intelligence"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "anthropic>=0.25.0",
    "tavily-python>=0.3.3",
    "biopython>=1.83",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "rich>=13.7.1",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
]

[project.scripts]
aria-pi = "aria_pi.orchestrator:main"

[tool.setuptools.packages.find]
include = ["aria_pi*"]

[tool.setuptools.package-data]
aria_pi = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["aria_pi/tests"]
python_files = ["test_*.py"]
